--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,500;1,400&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./css/style-global.css" />
     <link rel="stylesheet" href="./css/style-usuario.css" />
     <link rel="stylesheet" href="./css/style-dados-usuario.css" />
@@ -18,7 +25,10 @@ Amarelo: #725200
     -->
     <section>
       <div class="dados-usuario"></div>
-      <div>1</div>
+      <div class="icone-editar"></div>
+    </section>
+    <section>
+      <div id="cards"></div>
     </section>
     <script src="./js/informacao-usuario.js"></script>
   </body>
