--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="stylesheet" href="./css/style-cards.css" />
+    <link rel="stylesheet" href="./css/responsivo.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,500;1,400&display=swap"
       rel="stylesheet"
@@ -23,13 +25,17 @@ Verde: #046313
 Azul: #044A7D
 Amarelo: #725200
     -->
-    <section>
-      <div class="dados-usuario"></div>
-      <div class="icone-editar"></div>
-    </section>
-    <section>
-      <div id="cards"></div>
-    </section>
+    <main>
+      <section>
+        <div class="dados-usuario"></div>
+        <div class="icone-editar"></div>
+      </section>
+      <section class="card-container">
+        <div id="cards"></div>
+      </section>
+    </main>
+
     <script src="./js/informacao-usuario.js"></script>
+    <script src="./js/projetos-usuarios.js"></script>
   </body>
 </html>
